# ChangeLog for net-ftp/filezilla
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-ftp/filezilla/ChangeLog,v 1.62 2010/01/30 18:18:06 armin76 Exp $

  30 Jan 2010; Raúl Porcel <armin76@gentoo.org> filezilla-3.3.0.1.ebuild:
  sparc stable wrt #297020

  07 Jan 2010; Joseph Jezak <josejx@gentoo.org> filezilla-3.3.0.1.ebuild:
  Marked ppc stable for bug #297020.

*filezilla-3.3.1 (05 Jan 2010)

  05 Jan 2010; Bernard Cafarelli <voyageur@gentoo.org>
  -filezilla-3.2.6.1.ebuild, -filezilla-3.2.7.1.ebuild,
  -filezilla-3.2.8.ebuild, -filezilla-3.2.8.1.ebuild,
  +filezilla-3.3.1.ebuild:
  Version bump, remove other 3.2 versions

  25 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  filezilla-3.3.0.1.ebuild:
  stable x86, bug 297020

  24 Dec 2009; Pacho Ramos <pacho@gentoo.org> filezilla-3.3.0.1.ebuild:
  amd64 stable, bug 297020

*filezilla-3.3.0.1 (15 Nov 2009)

  15 Nov 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +filezilla-3.3.0.1.ebuild:
  Version bump, cycle tabs shortcuts now loop around, bugfixes

*filezilla-3.3.0 (09 Nov 2009)

  09 Nov 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +filezilla-3.3.0.ebuild:
  Bump, adds a tabbed interface and desktop notifications

*filezilla-3.2.8.1 (11 Oct 2009)

  11 Oct 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +filezilla-3.2.8.1.ebuild:
  Version bump, bugfixes

*filezilla-3.2.8 (04 Oct 2009)

  04 Oct 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +filezilla-3.2.8.ebuild:
  Version bump, remember last used search conditions, display link overlay
  on icons of links, simplify default file exists action dialogs, bugfixes
  and minor changes

*filezilla-3.2.7.1 (24 Aug 2009)

  24 Aug 2009; Bernard Cafarelli <voyageur@gentoo.org>
  filezilla-3.2.4.1-r1.ebuild, -filezilla-3.2.5.ebuild,
  filezilla-3.2.6.1.ebuild, -filezilla-3.2.7.ebuild,
  +filezilla-3.2.7.1.ebuild:
  Bump to fix a crash in new filters in 3.2.7. Also fix dependencies for