@@ -1,8 +1,10 @@
 DIST FileZilla_3.3.0.1_src.tar.bz2 3113486 RMD160 1bfbc885773229c4c72ad8c82001fadd555b9b3d SHA1 51ecb7c79c53466595c5691945ad83b49415f1b4 SHA256 67abea4b429e759eabafc510d342e04d9da0bfd18ab52c5d8d5e58523b023caa
 DIST FileZilla_3.3.0_src.tar.bz2 3110131 RMD160 26dff24af2261c282dc6964b5614e88615d6fe04 SHA1 d2263367dd823513e231fda265bd5f4a7cea4bbc SHA256 a72022c55f6dbe5d98d9b4cbc21240998d7ebd662f16dd6396c988fcf552b6f1
 DIST FileZilla_3.3.1_src.tar.bz2 3129864 RMD160 72ade8ebc1d8e26b21900814aa168e834d3b9155 SHA1 aa0c42e0fed93e7068376b63213ff7c164fd078e SHA256 2c4e8e37c63517404967efd2740d5ebeff6dae1c52b29a31a209766a90204178
+DIST FileZilla_3.3.2_src.tar.bz2 3186595 RMD160 5d74132747aa6345ab8bc19aff06cf034412c597 SHA1 80c5357eea6ec9ce74d9e85789680eb289abc354 SHA256 e25758cf0523f9d09df0522a666f108bd415356abf0137877c42d6c5470b2afe
 EBUILD filezilla-3.3.0.1.ebuild 1665 RMD160 ba5ed4642b4282a905a2947430eb10bd3fb8add4 SHA1 08c6b768173198c4db3da5d5ab7833a54f9132fe SHA256 91800068e5a6f3d6242969b628a10b6f49ad73c71c355564169161b854c2ef78
 EBUILD filezilla-3.3.0.ebuild 1664 RMD160 6852d925f5f540a685ca2c9129a58053e2f7863d SHA1 8a5521ae0a1284221fac451478942df96403438c SHA256 ba1260054d925db076c38d51a27d84621e427180b6567a5cfe612970c87e9af4
 EBUILD filezilla-3.3.1.ebuild 1664 RMD160 528a9091c2596cc51693538ef1a3ede7badb2b07 SHA1 0b56cc08d4ea8615c213fc347246c9e9415edde0 SHA256 03cef4068325227b608e5c3d4956277381d59545dadef6340b5a9db479a60f3e
-MISC ChangeLog 11300 RMD160 ddc96bccc7ee3c22cc2596931a41561818436b49 SHA1 2b90477e1f28c616c521ddc356f9c1c36e40875d SHA256 eabcb053a33131973434c1341b4bc1d843d6f51c93203f3ac0603967d609231c
+EBUILD filezilla-3.3.2.ebuild 1664 RMD160 20b6c3bdf42545051ce0f71ea9ad3c3147c8b08e SHA1 957ab56fbd8c03a303fda393272c9875fd0e7e9f SHA256 bc66287cf66b03761efaa33415fe6cdfff002e1e98f1430ab3c2789a3dfcf50a
+MISC ChangeLog 11431 RMD160 690f94c868cd28d3e9a3eb3d0479ee0ffccbe323 SHA1 7b0a6f371027df71c23945ff371b3dc0d8d76c69 SHA256 bc53e268e1a64616864b50ae67c42286449352e20c0aac394db5e94eb90445f6
 MISC metadata.xml 358 RMD160 847093b8297b203ca89664d66e195f763d50e751 SHA1 a61011a0ee29bdb9a156e297a414bc2902598156 SHA256 13ba819a417c003a969b6557fd32a73ed49be658c3e0470c29a21ee807d5a28b
